@@ -92,6 +92,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * CSS stylesheet MediaWiki:Noscript.css is now loaded for users with JavaScript
   disabled (enclosed in the head in a <noscript> tag)
 * Added UserGetLanguageObject hook to change the language used in $wgLang
+* (bug 14645) When $wgMiserMode is on, expensive special pages are styled
+  differently (italicized by default) on Special:SpecialPages
 
 === Bug fixes in 1.18 ===
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
